[gd_scene load_steps=7 format=2]

[ext_resource path="res://sounds/sfx_swooshing.wav" type="AudioStream" id=1]
[ext_resource path="res://sounds/sfx_wing.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/audioPlayer.gd" type="Script" id=3]
[ext_resource path="res://sounds/sfx_point.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/sfx_die.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/sfx_hit.wav" type="AudioStream" id=6]

[node name="audioPlayer" type="Node2D"]
script = ExtResource( 3 )

[node name="sfxDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="sfxHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="sfxPoint" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="sfxSwooshing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="sfxWing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
mix_target = 2
